# Termometro_Micro

./: CMakeLists.txt  Curva_Temperatura.xlsx  Estrutura_Mecânica.SLDPRT  PCB_PCB_instrumentação_2026-06-28.json  README.md  Termometro.c
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  sensor_temperatura.dis  sensor_temperatura.elf  sensor_temperatura.elf.map  sensor_temperatura.hex  sensor_temperatura.uf2
build_ninja/pico-sdk/: cmake_install.cmake
build_ninja/pico-sdk/docs/: cmake_install.cmake
build_ninja/pico-sdk/src/: cmake_install.cmake
build_ninja/pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
build_ninja/pico-sdk/src/common/boot_picoboot_headers/: cmake_install.cmake
build_ninja/pico-sdk/src/common/boot_uf2_headers/: cmake_install.cmake
build_ninja/pico-sdk/src/common/hardware_claim/: cmake_install.cmake
build_ninja/pico-sdk/src/common/pico_base_headers/: cmake_install.cmake
build_ninja/pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
build_ninja/pico-sdk/src/common/pico_bit_ops_headers/: cmake_install.cmake
build_ninja/pico-sdk/src/common/pico_divider_headers/: cmake_install.cmake
build_ninja/pico-sdk/src/common/pico_stdlib_headers/: cmake_install.cmake
build_ninja/pico-sdk/src/common/pico_sync/: cmake_install.cmake
build_ninja/pico-sdk/src/common/pico_time/: cmake_install.cmake
build_ninja/pico-sdk/src/common/pico_usb_reset_interface_headers/: cmake_install.cmake
build_ninja/pico-sdk/tools/: cmake_install.cmake
(+88 files in other folders)
